Corrected commenting style for NO Scrollbar.

--- a/projects/bible-query/styles/style.css
+++ b/projects/bible-query/styles/style.css
@@ -427,9 +427,9 @@ a,
   text-align: center;
 }
 
-/* ----------NO Scrollbar----------
-.container {
-  -ms-overflow-style: none; Internet Explorer 10+
+/* ----------NO Scrollbar---------- */
+/* .container {
+  -ms-overflow-style: none;  Internet Explorer 10+
   scrollbar-width: none; Firefox
 }
 .container::-webkit-scrollbar {
